# pixi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: main.cpp  yuv420_to_rgba_example.cpp
include/pixi/: parsers.h
include/pixiologist/: parsers.h
include/pixiologist/color_space/: yuv420_to_rgba8888.h
lib/include/: image_resizer.h  yuv_to_rgba888.h
src/: parsers.cpp
src/color_space/: yuv420_to_rgba8888.cc
src/examples/generators_usage/: resizer_example.cpp  yuv_420_to_rgba8888_example.cpp
src/examples/react-native/: App.tsx  package.json
src/examples/react-native/android/: CmakeLists.txt  build.gradle
src/examples/react-native/android/app/: build.gradle
src/examples/react-native/android/app/src/main/java/com/example/: MainApplication.java
src/examples/react-native/android/app/src/main/java/com/example/pixi/: PixiInstaller.java  PixiModule.java  PixiModule.kt  PixiPackage.java  PixiPackage.kt  PixiProxy.kt
src/examples/react-native/android/app/src/main/java/com/example/pixiologist/: PixiologistModule.java  PixiologistPackage.java
src/examples/react-native/android/cpp/: JSITypedArray.cpp  JSITypedArray.h  JniOnLoad.cpp  PixiHostObject.cpp  PixiInstaller.cpp  PixiProxy.cpp
src/examples/react-native/android/cpp/include/: PixiHostObject.h  PixiInstaller.h  PixiProxy.h
src/examples/react-native/cpp/: example.cpp
src/examples/react-native/src/: CameraPage.tsx  PixiModule.ts  PixiProxyModule.ts  constants.ts
src/examples/react-native/src/frame-processors/: pixiProcessorNative.ts
src/generators/: build_yuv420_to_rgba888.sh  image_resizer.cpp  yuv420_to_rgba8888.cpp  yuv420_to_rgba8888_generate
src/generators/output/: yuv_to_rgba8888.h
src/generators/yuv420_to_rgba8888_generate.dSYM/Contents/: Info.plist
src/generators/yuv420_to_rgba8888_generate.dSYM/Contents/Resources/DWARF/: yuv420_to_rgba8888_generate
src/generators/yuv420_to_rgba8888_generate.dSYM/Contents/Resources/Relocations/aarch64/: yuv420_to_rgba8888_generate.yml
